added tags update endpoint, api refactor
